--- a/hw/hw1.ipynb
+++ b/hw/hw1.ipynb
@@ -2,24 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "# pd.set_option('max_colwidth', 50)\n",
-    "# set this if you need to"
+    "#pd.set_option('max_colwidth', 50)\n",
+    "# set this if you need to\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>raceethnicity</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
+       "      <th>streetaddress</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>lawenforcementagency</th>\n",
+       "      <th>cause</th>\n",
+       "      <th>armed</th>\n",
+       "      <th>county_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>A'donte Washington</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>February</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Clearview Ln</td>\n",
+       "      <td>Millbrook</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Millbrook Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>54766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Aaron Rutledge</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>300 block Iris Park Dr</td>\n",
+       "      <td>Pineville</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>Rapides Parish Sheriff's Office</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>40930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Aaron Siler</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>March</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>22nd Ave and 56th St</td>\n",
+       "      <td>Kenosha</td>\n",
+       "      <td>WI</td>\n",
+       "      <td>Kenosha Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>54930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Aaron Valdez</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Hispanic/Latino</td>\n",
+       "      <td>March</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3000 Seminole Ave</td>\n",
+       "      <td>South Gate</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>South Gate Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>Firearm</td>\n",
+       "      <td>55909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Adam Jovicic</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>March</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>364 Hiwood Ave</td>\n",
+       "      <td>Munroe Falls</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>Kent Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>49669</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                name  age gender    raceethnicity     month  day  \\\n",
+       "0           0  A'donte Washington   16   Male            Black  February   23   \n",
+       "1           1      Aaron Rutledge   27   Male            White     April    2   \n",
+       "2           2         Aaron Siler   26   Male            White     March   14   \n",
+       "3           3        Aaron Valdez   25   Male  Hispanic/Latino     March   11   \n",
+       "4           4        Adam Jovicic   29   Male            White     March   19   \n",
+       "\n",
+       "   year           streetaddress          city state  \\\n",
+       "0  2015            Clearview Ln     Millbrook    AL   \n",
+       "1  2015  300 block Iris Park Dr     Pineville    LA   \n",
+       "2  2015    22nd Ave and 56th St       Kenosha    WI   \n",
+       "3  2015       3000 Seminole Ave    South Gate    CA   \n",
+       "4  2015          364 Hiwood Ave  Munroe Falls    OH   \n",
+       "\n",
+       "              lawenforcementagency    cause    armed  county_income  \n",
+       "0      Millbrook Police Department  Gunshot       No          54766  \n",
+       "1  Rapides Parish Sheriff's Office  Gunshot       No          40930  \n",
+       "2        Kenosha Police Department  Gunshot       No          54930  \n",
+       "3     South Gate Police Department  Gunshot  Firearm          55909  \n",
+       "4           Kent Police Department  Gunshot       No          49669  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "killings = pd.read_csv('./data/police-killings.csv')\n",
     "killings.head()"
@@ -27,15 +178,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unanmed</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
+       "      <th>streetaddress</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>agency</th>\n",
+       "      <th>cause</th>\n",
+       "      <th>armed</th>\n",
+       "      <th>county_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>A'donte Washington</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>February</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Clearview Ln</td>\n",
+       "      <td>Millbrook</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>Millbrook Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>54766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Aaron Rutledge</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>April</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>300 block Iris Park Dr</td>\n",
+       "      <td>Pineville</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>Rapides Parish Sheriff's Office</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>40930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Aaron Siler</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>March</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>22nd Ave and 56th St</td>\n",
+       "      <td>Kenosha</td>\n",
+       "      <td>WI</td>\n",
+       "      <td>Kenosha Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>54930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Aaron Valdez</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Hispanic/Latino</td>\n",
+       "      <td>March</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3000 Seminole Ave</td>\n",
+       "      <td>South Gate</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>South Gate Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>Firearm</td>\n",
+       "      <td>55909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Adam Jovicic</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>White</td>\n",
+       "      <td>March</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>364 Hiwood Ave</td>\n",
+       "      <td>Munroe Falls</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>Kent Police Department</td>\n",
+       "      <td>Gunshot</td>\n",
+       "      <td>No</td>\n",
+       "      <td>49669</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   unanmed                name  age gender             race     month  day  \\\n",
+       "0        0  A'donte Washington   16   Male            Black  February   23   \n",
+       "1        1      Aaron Rutledge   27   Male            White     April    2   \n",
+       "2        2         Aaron Siler   26   Male            White     March   14   \n",
+       "3        3        Aaron Valdez   25   Male  Hispanic/Latino     March   11   \n",
+       "4        4        Adam Jovicic   29   Male            White     March   19   \n",
+       "\n",
+       "   year           streetaddress          city state  \\\n",
+       "0  2015            Clearview Ln     Millbrook    AL   \n",
+       "1  2015  300 block Iris Park Dr     Pineville    LA   \n",
+       "2  2015    22nd Ave and 56th St       Kenosha    WI   \n",
+       "3  2015       3000 Seminole Ave    South Gate    CA   \n",
+       "4  2015          364 Hiwood Ave  Munroe Falls    OH   \n",
+       "\n",
+       "                            agency    cause    armed  county_income  \n",
+       "0      Millbrook Police Department  Gunshot       No          54766  \n",
+       "1  Rapides Parish Sheriff's Office  Gunshot       No          40930  \n",
+       "2        Kenosha Police Department  Gunshot       No          54930  \n",
+       "3     South Gate Police Department  Gunshot  Firearm          55909  \n",
+       "4           Kent Police Department  Gunshot       No          49669  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Make the following changed to column names:\n",
     "# lawenforcementagency -> agency\n",
-    "# raceethnicity        -> race"
+    "# raceethnicity        -> race\n",
+    "killings.columns= ['unanmed', 'name', 'age', 'gender', 'race', 'month', 'day', 'year', 'streetaddress', 'city', 'state', 'agency','cause', 'armed', 'county_income']\n",
+    "killings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "unanmed          0\n",
+       "name             0\n",
+       "age              0\n",
+       "gender           0\n",
+       "race             0\n",
+       "month            0\n",
+       "day              0\n",
+       "year             0\n",
+       "streetaddress    4\n",
+       "city             0\n",
+       "state            0\n",
+       "agency           0\n",
+       "cause            0\n",
+       "armed            0\n",
+       "county_income    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Show the count of missing values in each column\n",
+    "killings.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unanmed</th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
+       "      <th>streetaddress</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>agency</th>\n",
+       "      <th>cause</th>\n",
+       "      <th>armed</th>\n",
+       "      <th>county_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [unanmed, name, age, gender, race, month, day, year, streetaddress, city, state, agency, cause, armed, county_income]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. replace each null value in the dataframe with the string \"Unknown\"\n",
+    "killings.fillna(value=\"Unknown\")\n",
+    "\n",
+    "#I cant figure out a way to see if this code actually worked. isnull().sum() still returns that there are 4 null values\n",
+    "#killings.isnull()sum()\n",
+    "\n",
+    "#From my understanding this code below is saying that there are no rows that contin \"Unknown\"\n",
+    "killings[killings.streetaddress ==\"Unknown\"]\n",
+    "\n",
+    "#why doesn't this code below work?\n",
+    "#len(killings[killings.streetaddresss == \"Unknown\"])\n"
    ]
   },
   {
@@ -46,7 +447,8 @@
    },
    "outputs": [],
    "source": [
-    "# 2. Show the count of missing values in each column"
+    "# 4. How many killings were there so far in 2015?\n",
+    "len(killings.index)"
    ]
   },
   {
@@ -57,7 +459,39 @@
    },
    "outputs": [],
    "source": [
-    "# 3. replace each null value in the dataframe with the string \"Unknown\""
+    "# 5. Of all killings, how many were male and how many female?\n",
+    "maledeath= killings[killings.gender == 'Male']\n",
+    "maledeath\n",
+    "len(maledeath.index)\n",
+    "\n",
+    "femaledeath= killings[killings.gender == 'Female']\n",
+    "len(femaledeath.index)\n",
+    "\n",
+    "deathbygender=[len(maledeath.index),len(femaledeath.index)]\n",
+    "deathbygender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "102"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6. How many killings were of unarmed people?\n",
+    "len(killings[killings.armed == \"No\"])"
    ]
   },
   {
@@ -68,7 +502,43 @@
    },
    "outputs": [],
    "source": [
-    "# 4. How many killings were there so far in 2015?"
+    "# 7. What percentage of all killings were unarmed?\n",
+    "unarmed_death= len(killings[killings.armed == \"No\"]) \n",
+    "total_death =len(killings.index)\n",
+    "\n",
+    "unarmed_death / total_death * 100.0\n",
+    "\n",
+    "#Not sure how to return a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "state\n",
+       "CA    74\n",
+       "TX    46\n",
+       "FL    29\n",
+       "AZ    25\n",
+       "OK    22\n",
+       "Name: state, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 8. What are the 5 states with the most killings?\n",
+    "state_killings= killings.groupby('state').state.count().sort_values(ascending=False).head(5)\n",
+    "state_killings"
    ]
   },
   {
@@ -79,7 +549,8 @@
    },
    "outputs": [],
    "source": [
-    "# 5. Of all killings, how many were male and how many female?"
+    "# 9. Show a value counts of deaths for each race\n",
+    "killings.groupby('race').race.count().sort_values(ascending=False)"
    ]
   },
   {
@@ -90,51 +561,7 @@
    },
    "outputs": [],
    "source": [
-    "# 6. How many killings were of unarmed people?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 7. What percentage of all killings were unarmed?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 8. What are the 5 states with the most killings?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 9. Show a value counts of deaths for each race"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 10. Display a histogram of ages of all killings"
+    "# 10. Display a histogram of ages of all killings\n"
    ]
   },
   {
