--- a/hw/hw1.ipynb
+++ b/hw/hw1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1830,7 +1830,7 @@
        "4          CA     94114  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1910,7 +1910,7 @@
        "4           19     94  20141110  Routine - Unscheduled"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -2003,7 +2003,7 @@
        "4   Unapproved or unmaintained equipment or utensils  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2015,25 +2015,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score</th>\n",
+       "      <th>TaxCode</th>\n",
+       "      <th>address</th>\n",
+       "      <th>application_date</th>\n",
+       "      <th>business_certificate</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>city</th>\n",
+       "      <th>date</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>owner_address</th>\n",
+       "      <th>owner_city</th>\n",
+       "      <th>owner_name</th>\n",
+       "      <th>owner_state</th>\n",
+       "      <th>owner_zip</th>\n",
+       "      <th>phone_number</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H24</td>\n",
+       "      <td>033 Belden Pl</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>779059</td>\n",
+       "      <td>10</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.791116</td>\n",
+       "      <td>-122.403816</td>\n",
+       "      <td>Tiramisu Kitchen</td>\n",
+       "      <td>33 Belden St</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>Tiramisu LLC</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>94104</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94104</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H24</td>\n",
+       "      <td>1200 Van Ness Ave, 3rd Floor</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.786848</td>\n",
+       "      <td>-122.421547</td>\n",
+       "      <td>Nrgize Lifestyle Cafe</td>\n",
+       "      <td>1200 Van Ness Ave, 3rd Floor</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>24 Hour Fitness Inc</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>94109</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94109</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H24</td>\n",
+       "      <td>500 California St, 2nd  Floor</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>352312</td>\n",
+       "      <td>24</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.792888</td>\n",
+       "      <td>-122.403135</td>\n",
+       "      <td>OMNI S.F. Hotel - 2nd Floor Pantry</td>\n",
+       "      <td>500 California St, 2nd Floor</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>OMNI San Francisco Hotel Corp</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>94104</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94104</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H24</td>\n",
+       "      <td>2801 Leavenworth St</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>346882</td>\n",
+       "      <td>31</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.807155</td>\n",
+       "      <td>-122.419004</td>\n",
+       "      <td>Norman's Ice Cream and Freezes</td>\n",
+       "      <td>2801 Leavenworth St</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>Norman Antiforda</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>94133</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94133</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>H24</td>\n",
+       "      <td>3202 FOLSOM St</td>\n",
+       "      <td>10/10/2001</td>\n",
+       "      <td>340024</td>\n",
+       "      <td>45</td>\n",
+       "      <td>S.F.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.747114</td>\n",
+       "      <td>-122.413641</td>\n",
+       "      <td>CHARLIE'S DELI CAFE</td>\n",
+       "      <td>1150 SANCHEZ</td>\n",
+       "      <td>S.F.</td>\n",
+       "      <td>HARB, CHARLES AND KRISTIN</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>94114</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94110</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score TaxCode                        address application_date  \\\n",
+       "0    NaN     H24                  033 Belden Pl              NaN   \n",
+       "1    NaN     H24   1200 Van Ness Ave, 3rd Floor              NaN   \n",
+       "2    NaN     H24  500 California St, 2nd  Floor              NaN   \n",
+       "3    NaN     H24           2801 Leavenworth St               NaN   \n",
+       "4    NaN     H24                3202 FOLSOM St        10/10/2001   \n",
+       "\n",
+       "   business_certificate  business_id           city  date   latitude  \\\n",
+       "0                779059           10  San Francisco   NaN  37.791116   \n",
+       "1                   NaN           19  San Francisco   NaN  37.786848   \n",
+       "2                352312           24  San Francisco   NaN  37.792888   \n",
+       "3                346882           31  San Francisco   NaN  37.807155   \n",
+       "4                340024           45           S.F.   NaN  37.747114   \n",
+       "\n",
+       "    longitude                                name  \\\n",
+       "0 -122.403816                    Tiramisu Kitchen   \n",
+       "1 -122.421547               Nrgize Lifestyle Cafe   \n",
+       "2 -122.403135  OMNI S.F. Hotel - 2nd Floor Pantry   \n",
+       "3 -122.419004      Norman's Ice Cream and Freezes   \n",
+       "4 -122.413641                 CHARLIE'S DELI CAFE   \n",
+       "\n",
+       "                  owner_address     owner_city                     owner_name  \\\n",
+       "0                  33 Belden St  San Francisco                   Tiramisu LLC   \n",
+       "1  1200 Van Ness Ave, 3rd Floor  San Francisco            24 Hour Fitness Inc   \n",
+       "2  500 California St, 2nd Floor  San Francisco  OMNI San Francisco Hotel Corp   \n",
+       "3           2801 Leavenworth St  San Francisco               Norman Antiforda   \n",
+       "4                  1150 SANCHEZ           S.F.      HARB, CHARLES AND KRISTIN   \n",
+       "\n",
+       "  owner_state owner_zip phone_number postal_code type  \n",
+       "0          CA     94104          NaN       94104  NaN  \n",
+       "1          CA     94109          NaN       94109  NaN  \n",
+       "2          CA     94104          NaN       94104  NaN  \n",
+       "3          CA     94133          NaN       94133  NaN  \n",
+       "4          CA     94114          NaN       94110  NaN  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1 Combine the three dataframes into one data frame called restaurant_scores\n",
-    "# Hint: http://pandas.pydata.org/pandas-docs/stable/merging.html"
+    "# Hint: http://pandas.pydata.org/pandas-docs/stable/merging.html\n",
+    "business_inspections = [businesses, inspections]\n",
+    "result = pd.concat(business_inspections)\n",
+    "result.head(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrameGroupBy' object has no attribute 'value_counts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-42da4584ae47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 2 Which ten business have had the most inspections?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/pandas/core/groupby.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m    557\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    558\u001b[0m         raise AttributeError(\"%r object has no attribute %r\" %\n\u001b[0;32m--> 559\u001b[0;31m                              (type(self).__name__, attr))\n\u001b[0m\u001b[1;32m    560\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    561\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrameGroupBy' object has no attribute 'value_counts'"
+     ]
+    }
+   ],
    "source": [
-    "# 2 Which ten business have had the most inspections?"
+    "# 2 Which ten business have had the most inspections?\n",
+    "result.groupby(\"name\").value_counts"
    ]
   },
   {
